[package]
name = "moonfire-ffmpeg"
version = "0.0.1"
authors = ["Scott Lamb <slamb@slamb.org>"]
readme = "../README.md"
#links = "ffmpeg"
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
swscale = []

[dependencies]
libc = "0.2"
log = { version = "0.4", features = ["release_max_level_info"] }
parking_lot = { version = "0.9", features = [] }

[dev-dependencies]
cstr = "0.1.7"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
