[package]
name = "moonfire-ffmpeg"
version = "0.0.1"
authors = ["Scott Lamb <slamb@slamb.org>"]
readme = "../README.md"
#links = "ffmpeg"
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
swscale = []

[dependencies]
libc = "0.2.69"
log = "0.4.8"
parking_lot = { version = "0.11.1", features = [] }

[dev-dependencies]
cstr = "0.2.5"
mylog = { git = "https://github.com/scottlamb/mylog" }

[build-dependencies]
cc = "1.0.50"
pkg-config = "0.3.17"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
